# ToDoList

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: tasks.csv
src/: MemoryManager.cpp  MemoryManager.h  Task.cpp  Task.h  ToDoList.cpp  ToDoList.h
tests/: test_main.cpp
